--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Javey Talk - Javey.org</title>
+<title>Javey Talk - 技术、产品、运营 | Javey.org</title>
 <meta name="keywords" content="互联网产品设计,产品运营,互联网营销,互联网技术,前沿技术资讯,小程序,程序开发,技术人生,创业">
 <meta name="description" content="皆为互联网，关注于互联网产品设计,产品运营,互联网营销,互联网技术,前沿技术资讯,小程序,程序开发,技术人生,创业">
 <style type="text/css">
@@ -25,7 +25,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p class="main"><a href="http://www.javey.org" title="Javey Talk">Javey Talk-Javey.org</a></p>
+<p class="main"><a href="http://www.javey.org" title="Javey Talk - 技术、产品、运营">Javey Talk - 技术、产品、运营</a><br><br><a href="http://www.javey.org" title="Javey Talk - 技术、产品、运营">www.javey.org</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
