--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
 
 <p class="footer">Copyright &copy; 2005~2019 <a href="http://www.javey.org">Javey.org</a>. All Rights Reserved </p>
 </body>
+<div id="rep" style="display:none;"><script type="text/javascript" src="https://s11.cnzz.com/z_stat.php?id=2248578&web_id=2248578"></script></div>
 </html>
